# Stegogifigogets

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  Stegogifigogets.cpp
include/: GifWatermarker.h
include/stegogifigogets/: GifWatermarker.h
src/: CMakeLists.txt  GifWatermarker.cpp
